# sortResearch

./: LICENSE  README.md
c/: CMakeLists.txt
c/include/: sorting.h  testing.h
c/src/: main.c  sorting.c  testing.c
cpp/: CMakeLists.txt
cpp/src/: main.cpp  sorting.cpp
golang/sorting/: sorting.go  sorting_test.go
results/: benchResults.m  sortResearch.m  table.xlsx
tests/: go.mod  main.go  test.json
tests/testgen/: testgen.go
